--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="title-container">
                 <div>
                     <h1>This website is awesome</h1>
-                    <p id="para">This website has some subtext that goes here under the main title. It is a smaller font and the color is low contracts.</p>
+                    <p id="para1">This website has some subtext that goes here under the main title. It is a smaller font and the color is low contracts.</p>
                     <button id="btn1">Sign Up</button>
                 </div>
                 <div class="physicists-container">
@@ -43,7 +43,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="./fig2.jpeg" alt="Thermal Physics">
+                    <img src="./fig2.jpg" alt="Thermal Physics">
                     <figcaption>Topic 2: Thermal Physics</figcaption>
             </div>
             <div>
@@ -77,8 +77,8 @@
         </article>
         <div class="signUp-container">
             <div>
-                <h3 id="para">Call to action! It is time!</h3>
-                <p>Sign up for out product by clicking that button over there!</p>
+                <h3 id="action">Call to action! It is time!</h3>
+                <p id="para2">Sign up for out product by clicking that button over there!</p>
             </div>
             <div>
                 <button id="btn2">Sign Up</button>
